--- a/index.html
+++ b/index.html
@@ -1,174 +1,174 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
-  <link rel="stylesheet" href="css/normalize.css">
-  <link rel="stylesheet" href="css/style.css">
-  <title>CV</title>
-</head>
-<body>
-  <header class="page-header">
-    <div class="container">
-      <img class="page-header__photo" src="img/avatar.jpg" alt="Aleksandr Krasilnikov">
-      <div class="page-header__content">
-        <h1 class="page-header__name">Aleksandr Krasilnikov</h1>
-        <span class="page-header__profession">Junior Frontend Developer</span>
-        <ul class="page-header__contact-list">
-          <li class="page-header__contact">
-            <a class="page-header__contact-link page-header__contact-link--github" href="https://github.com/alexk08"><span class="visually-hidden">Github</span class="visually-hidden"></a>
-          </li>
-          <li class="page-header__contact">
-            <a class="page-header__contact-link page-header__contact-link--skype" href="skype:alekras_88?chat"><span class="visually-hidden">Skype</span></a>
-          </li>
-        </ul>
-      </div>
-      <a class="page-header__contact-button" href="mailto:akapacruk@gmail.com">Contact me</a>
-    </div>
-  </header>
-  <main>
-    <section class="summary">
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
+    <title>CV</title>
+  </head>
+  <body>
+    <header class="page-header">
       <div class="container">
-        <div class="section-inner">
-          <h2 class="summary__title section-title">About me</h2>
-          <p class="summary__content">About one year ago I started to run online ineractive courses on the website HTML Academy and nowadays I continue to learn and explore web-development.</p>
-        </div>
-      </div>
-    </section>
-    <section class="skills">
-      <div class="container">
-        <div class="section-inner">
-          <h2 class="skills__title section-title">Skills</h2>
-          <ul class="skills__list">
-            <li class="skills__item">
-              <h3 class="skills__name">HTML5</h3>
-              <div class="skills__level-bar">
-                <div class="skills__level-bar-inner skills__level-bar-inner--html"></div>
-              </div>
+        <img class="page-header__photo" src="img/avatar.jpg" alt="Aleksandr Krasilnikov" width="180" height="180">
+        <div class="page-header__content">
+          <h1 class="page-header__name">Aleksandr Krasilnikov</h1>
+          <span class="page-header__profession">Junior Frontend Developer</span>
+          <ul class="page-header__contact-list">
+            <li class="page-header__contact">
+              <a class="page-header__contact-link page-header__contact-link--github" href="https://github.com/alexk08"><span class="visually-hidden">Github</span></a>
             </li>
-            <li class="skills__item">
-              <h3 class="skills__name">CSS3</h3>
-              <div class="skills__level-bar">
-                <div class="skills__level-bar-inner skills__level-bar-inner--css"></div>
-              </div>
-            </li>
-            <li class="skills__item">
-              <h3 class="skills__name">LESS</h3>
-              <div class="skills__level-bar">
-                <div class="skills__level-bar-inner skills__level-bar-inner--less"></div>
-              </div>
-            </li>
-            <li class="skills__item">
-              <h3 class="skills__name">BEM</h3>
-              <div class="skills__level-bar">
-                <div class="skills__level-bar-inner skills__level-bar-inner--bem"></div>
-              </div>
-            </li>
-            <li class="skills__item">
-              <h3 class="skills__name">Gulp</h3>
-              <div class="skills__level-bar">
-                <div class="skills__level-bar-inner skills__level-bar-inner--gulp"></div>
-              </div>
-            </li>
-            <li class="skills__item">
-              <h3 class="skills__name">JS(ES5)</h3>
-              <div class="skills__level-bar">
-                <div class="skills__level-bar-inner skills__level-bar-inner--js"></div>
-              </div>
-            </li>
-            <li class="skills__item">
-              <h3 class="skills__name">Git+GitHub</h3>
-              <div class="skills__level-bar">
-                <div class="skills__level-bar-inner skills__level-bar-inner--git"></div>
-              </div>
+            <li class="page-header__contact">
+              <a class="page-header__contact-link page-header__contact-link--skype" href="skype:alekras_88?chat"><span class="visually-hidden">Skype</span></a>
             </li>
           </ul>
         </div>
+        <a class="page-header__contact-button" href="mailto:akapacruk@gmail.com">Contact me</a>
       </div>
-    </section>
-    <section class="projects">
-      <div class="container">
-        <div class="section-inner">
-          <h2 class="projects__title section-title">My projects</h2 class="section-title">
-          <ul class="projects__list">
-            <li class="projects__item">
-              <a href="https://alexk08.github.io/984839-technomart-25/">
-                <img class="projects__image" src="" alt="">
-                <h3 class="projects__name">Интернет-магазин Техномарт</h3>
-              </a>
-              <p class="projects__description">
-                Online store of building materials and repair tools.
-              </p>
-            </li>
-            <li class="projects__item">
+    </header>
+    <main>
+      <section class="summary">
+        <div class="container">
+          <div class="section-inner">
+            <h2 class="summary__title section-title">About me</h2>
+            <p class="summary__content">About one year ago I started to run online ineractive courses on the website HTML Academy and nowadays I continue to learn and explore web-development.</p>
+          </div>
+        </div>
+      </section>
+      <section class="skills">
+        <div class="container">
+          <div class="section-inner">
+            <h2 class="skills__title section-title">Skills</h2>
+            <ul class="skills__list">
+              <li class="skills__item">
+                <h3 class="skills__name">HTML5</h3>
+                <div class="skills__level-bar">
+                  <div class="skills__level-bar-inner skills__level-bar-inner--html"></div>
+                </div>
+              </li>
+              <li class="skills__item">
+                <h3 class="skills__name">CSS3</h3>
+                <div class="skills__level-bar">
+                  <div class="skills__level-bar-inner skills__level-bar-inner--css"></div>
+                </div>
+              </li>
+              <li class="skills__item">
+                <h3 class="skills__name">LESS</h3>
+                <div class="skills__level-bar">
+                  <div class="skills__level-bar-inner skills__level-bar-inner--less"></div>
+                </div>
+              </li>
+              <li class="skills__item">
+                <h3 class="skills__name">BEM</h3>
+                <div class="skills__level-bar">
+                  <div class="skills__level-bar-inner skills__level-bar-inner--bem"></div>
+                </div>
+              </li>
+              <li class="skills__item">
+                <h3 class="skills__name">Gulp</h3>
+                <div class="skills__level-bar">
+                  <div class="skills__level-bar-inner skills__level-bar-inner--gulp"></div>
+                </div>
+              </li>
+              <li class="skills__item">
+                <h3 class="skills__name">JS(ES5)</h3>
+                <div class="skills__level-bar">
+                  <div class="skills__level-bar-inner skills__level-bar-inner--js"></div>
+                </div>
+              </li>
+              <li class="skills__item">
+                <h3 class="skills__name">Git+GitHub</h3>
+                <div class="skills__level-bar">
+                  <div class="skills__level-bar-inner skills__level-bar-inner--git"></div>
+                </div>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="projects">
+        <div class="container">
+          <div class="section-inner">
+            <h2 class="projects__title section-title">My projects</h2>
+            <ul class="projects__list">
+              <li class="projects__item">
+                <a href="https://alexk08.github.io/984839-technomart-25/">
+                  <img class="projects__image" src="img/technomart-mini.jpg" alt="Сайт магазина Техномарт" width="190" height="143">
+                  <h3 class="projects__name">Интернет-магазин Техномарт</h3>
+                </a>
+                <p class="projects__description">
+                  Online store of building materials and repair tools.
+                </p>
+              </li>
+              <li class="projects__item">
 
-              <a href="https://alexk08.github.io/984839-mishka-17/">Интернет-магазин Мишка</a>
-            </li>
-            <li class="projects__item">
+                <a href="https://alexk08.github.io/984839-mishka-17/">Интернет-магазин Мишка</a>
+              </li>
+              <li class="projects__item">
 
-              <a href="https://alexk08.github.io/984839-kekstagram-18/">Кекстаграм</a>
-            </li>
-          </ul>
+                <a href="https://alexk08.github.io/984839-kekstagram-18/">Кекстаграм</a>
+              </li>
+            </ul>
+          </div>
         </div>
-      </div>
-    </section>
-    <section>
+      </section>
+      <section>
+        <div class="container">
+          <div class="section-inner">
+            <h2 class="section-title">My education</h2>
+            <ul>
+              <li>
+                <h3>Specialist in Physics</h3>
+                <p>Saratov State University<span>(2005-2010)</span></p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="section-inner">
+            <h2 class="section-title">Courses</h2>
+            <p>I successfully completed online courses at HTML Academy with the profession “Front-end Developer”.</p>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="section-inner">
+            <h2 class="section-title">Languages</h2>
+            <ul>
+              <li>
+                <span>Russian:</span>
+                <span>Native Speaker</span>
+              </li>
+              <li>
+                <span>English:</span>
+                <span>A1+ Elementary</span>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section>
+        <div class="container">
+          <div class="section-inner">
+            <h2 class="section-title">Interests</h2>
+            <ul>
+              <li>Snowboarding</li>
+              <li>Running</li>
+              <li>Hiking</li>
+              <li>Salsa</li>
+            </ul>
+          </div>
+        </div>
+      </section>
+    </main>
+    <footer class="page-footer">
       <div class="container">
-        <div class="section-inner">
-          <h2 class="section-title">My education</h2>
-          <ul>
-            <li>
-              <h3>Specialist in Physics</h3>
-              <p>Saratov State University<span>(2005-2010)</span></p>
-            </li>
-          </ul>
-        </div>
+        <p class="page-footer__developer">Designed by <a class="page-footer__link" href="mailto:akapacuk@gmail.com">Aleksandr Krasilnikov</a> for <a class="page-footer__link" href="https://rs.school/js/">RS-School</a></p>
       </div>
-    </section>
-    <section>
-      <div class="container">
-        <div class="section-inner">
-          <h2 class="section-title">Courses</h2>
-          <p>I successfully completed online courses at HTML Academy with the profession “Front-end Developer”.</p>
-        </div>
-      </div>
-    </section>
-    <section>
-      <div class="container">
-        <div class="section-inner">
-          <h2 class="section-title">Languages</h2>
-          <ul>
-            <li>
-              <span>Russian:</span>
-              <span>Native Speaker</span>
-            </li>
-            <li>
-              <span>English:</span>
-              <span>A1+ Elementary</span>
-            </li>
-          </ul>
-        </div>
-      </div>
-    </section>
-    <section>
-      <div class="container">
-        <div class="section-inner">
-          <h2 class="section-title">Interests</h2>
-          <ul>
-            <li>Snowboarding</li>
-            <li>Running</li>
-            <li>Hiking</li>
-            <li>Salsa</li>
-          </ul>
-        </div>
-      </div>
-    </section>
-  </main>
-  <footer class="page-footer">
-    <div class="container">
-      <p class="page-footer__developer">Designed by <a class="page-footer__link" href="mailto:akapacuk@gmail.com">Aleksandr Krasilnikov</a> for <a class="page-footer__link" href="https://rs.school/js/">RS-School</a></p>
-    </div>
-  </footer>
-</body>
+    </footer>
+  </body>
 </html>
